<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_field_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        app:boxCornerRadiusBottomEnd="@dimen/round_button_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/round_button_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/round_button_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/round_button_corner_radius"
        app:endIconContentDescription="@string/content_desc_clear_text"
        app:endIconDrawable="@drawable/ic_clear_24"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/scan_button"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choices_container"
        app:placeholderText="@string/search"
        app:startIconContentDescription="@string/content_desc_search"
        app:startIconDrawable="@drawable/ic_search_24"
        app:startIconTint="@color/input_field_icon_color_tint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
</layout>