<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/quantity_guide_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/positiveValueTextView"
            style="@style/InfoBoxTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/qty_guide_lr_padding"
            android:paddingEnd="@dimen/qty_guide_lr_padding"
            android:text="@string/positive_value"
            app:layout_constraintBottom_toTopOf="@+id/negativeValueTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/negativeValueTextView"
            style="@style/InfoBoxTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qty_guide_message_margin"
            android:paddingStart="@dimen/qty_guide_lr_padding"
            android:paddingEnd="@dimen/qty_guide_lr_padding"
            android:text="@string/negative_value"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/positiveValueTextView" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/closeGuideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/content_desc_close_info_guide"
            android:minHeight="@dimen/min_touch_target_size"
            android:src="@drawable/ic_baseline_close"
            android:tint="@color/info_guide_icon_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>